Fixed some z-index stuff

--- a/assets/styles/master.scss
+++ b/assets/styles/master.scss
@@ -185,56 +185,35 @@ html {
 			}
 		}
 
-		.canvas {
-			background: #ECF0F1;
-			left:       0;
+		.game-summary {
+			background: rgba(255, 255, 255, 0.8);
+			height:     40%;
+			left:       10%;
 			position:   absolute;
-			top:        0;
-			z-index:    0;
+			opacity:    0;
+			top:        -100%;
+			transition: all 250ms ease-out;
+			width:      80%;
+			z-index:    1000;
+
+			.scene-game-over & {
+				opacity: 1;
+				top:     30%;
+			}
 		}
 
-.ui-game-over {
-	@include hide();
-
-	height:    100%;
-	position:  absolute;
-	width:     100%;
-	z-index:   9000;
-
-	.scene-game-over & {
-		@include show();
-	}
-}
-
-	.game-summary {
-		background: rgba(255, 255, 255, 0.8);
-		height:     40%;
-		left:       10%;
-		position:   absolute;
-		opacity:    0;
-		top:        -100%;
-		transition: all 250ms ease-out;
-		width:      80%;
-		z-index:    1000;
-
-		.scene-game-over & {
-			opacity: 1;
-			top:     30%;
-		}
-	}
-
-		.play-again {
-			background:      rgb(60, 143, 199);
-			bottom:          1em;
-			border-radius:   0.5em;
-			color:           #fff;
-			display:         inline-block;
-			font-size:       2em;
-			left:            50%;
-			line-height:     2;
-			padding:         0 1em;
-			position:        absolute;
-			text-decoration: none;
-			text-transform:  uppercase;
-			transform:       translateX(-50%);
-		}
+			.play-again {
+				background:      rgb(60, 143, 199);
+				bottom:          1em;
+				border-radius:   0.5em;
+				color:           #fff;
+				display:         inline-block;
+				font-size:       2em;
+				left:            50%;
+				line-height:     2;
+				padding:         0 1em;
+				position:        absolute;
+				text-decoration: none;
+				text-transform:  uppercase;
+				transform:       translateX(-50%);
+			}
